# Greaterwms3

./: .gitignore  README.md  add_targets_and_sign.py  add_targets_to_repo.py  build.py  check_metadata.py  check_update_server.py  create_simple_update.py  create_update_package.py  create_versioned_root.py  ensure_tuf_metadata.py  ensure_versioned_metadata.py  fix_github_actions_tuf.py  fix_github_actions_tuf_final.py  fix_mac_metadata_generation.py  fix_mac_tuf_generation.py  fix_tuf_keys.py  fix_tuf_keys_final.py  fix_tuf_metadata_generation.py  fix_tuf_repository.py  generate_versioned_metadata.py  launcher.py  main.py  package_for_server.py  pyproject.toml  requirements.txt  simple_update_test.py  sqldiff  sqlite3  sqlite3_analyzer  sqlite3_rsync  test_github_actions.py  test_tuf_client.py  test_update_function.py  update.py  validate_config_consistency.py  verify_targets_files.py  workspace.ini
.github/workflows/: build-and-deploy.yml  main.text  main.yaml  stale.yaml
cache/: dynamic_update_config.json
dbs/: db.sqlite3
main/: CROSS_PLATFORM_UPDATE.md  GITHUB_ACTIONS_UPDATES.md  HOW_TUF_METADATA_WORKS.md  TIMED_UPDATE_CHECK.md  TUF_DEPLOYMENT_GUIDE.md  TUF_METADATA_EXPLANATION.md  TUF_SERVER_INTERACTION.md  TUF_UPDATE_PROCESS.md  UPDATE_README.md  cross_platform_updater.py  server_config.json  update_config.py  update_service.py  updater.py
main/media/: data.zh-CN.md
metadata/: root.json  snapshot.json  targets.json  timestamp.json
updates/: .tufup-repo-config
updates/app/: app.py  setup.ini
updates/keys/: root  root.pub  snapshot  snapshot.pub  targets  (+3 more)
(+29 files in other folders)
