[tool.poetry]
name = "greaterwms3"
version = "0.1.0"
description = ""
authors = ["GreaterWMS <38828089+Singosgu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.13"
bomiot = "=1.1.11"
tufup = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
